--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 		
 	<!-- 제이쿼리 -->
-    
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 
 	<!-- 만든 자바스크립트 -->
 	<script src="./js/common.js"></script>
@@ -54,8 +54,10 @@
 				<div class="mobile_menu_scroll">
 					<!-- 유틸메뉴 -->
 					<ul class="util_menu">
-						
-
+						<!--** 직접 작성할 공간 **-->
+						<li><a href="#">Home</a></li>
+						<li><a href="#">Login</a></li>
+						<li><a href="#">Sitemap</a></li>
 					</ul>
 
 
@@ -63,7 +65,38 @@
 					<nav id="gnb">
 						<h2 class="blind">메인메뉴</h2>
 						<!--** 직접 작성할 공간 **-->
+						<ul>
+							<!-- 메뉴1 -->
+							<li class="m1">
+								<a href="#">ABOUT</a>
+								<!-- 서브메뉴1-->
+								<ul>
+									<li><a href="#">그린 소개</a></li>
+									<li><a href="#">오시는 길</a></li>
+								</ul>
+							</li>
+							<!-- 메뉴2 -->
+							<li class="m2">
+								<a href="#">CLASS</a>
+								<!-- 서브메뉴2-->
+								<ul>
+									<li><a href="#">전체 보기</a></li>
+									<li><a href="#">분야별 소개</a></li>
+								</ul>
+							</li>
+							<!-- 메뉴3 -->
+							<li class="m3">
+								<a href="#">COMMUNITY</a>
+								<!-- 서브메뉴3-->
+								<ul>
+									<li><a href="#">공지사항</a></li>
+									<li><a href="#">뉴스</a></li>
+								</ul>
+							</li>
+							<!-- 메뉴4-->
+							<li class="m4"><a href="#">동영상강의</a></li>
 
+						</ul>
 
 
 					</nav>
