--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
     <script src="./js/main.js"></script>
 
 	<!-- 제이쿼리 플러그인 -->
-
+	<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+	<script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+					
 
 </head>
 
@@ -127,6 +129,26 @@
 
 			<!-- main_visual_slide 에 이미지 슬라이더 시작 -->
 			<!--** 직접 작성할 공간 **-->
+			<div class="main_visual_slide">
+				<div>
+					<div class="visual_item_wrap item1">
+						<h4 class="visual_title"> 첫번째 소개</h4>
+						<p>
+							<span>첫번째 소개가 들어갑니다</span>
+						</p>
+						<p class="detail_view"><a href="#">자세히 보기</a></p>
+					</div>
+				</div>
+				<div>
+					<div class="visual_item_wrap item2">
+						<h4 class="visual_title"> 두번째 소개</h4>
+						<p>
+							<span>두번째 소개가 들어갑니다</span>
+						</p>
+						<p class="detail_view"><a href="#">자세히 보기</a></p>
+					</div>
+				</div>
+			</div>
 
 
 			<!-- main_visual_slide 에 이미지 슬라이더 끝-->
