--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./css/main.css">
 
 	<!-- fontawesom CSS -->
-
+	<link rel="stylesheet" href="./css/all.css">
 		
 	<!-- 제이쿼리 -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
